--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -21,6 +21,7 @@ editor_options:
 * [fit K=1 on pbmc data](run_splitting_PMF_K1.html)
 * [point exponential and unimodal nonnegative]
 * [ebpm normal prior init in PMF](vga_init_in_ebpmf.html)
+* [ebpmf vs topic model](ebpmf_nmf_diff.html)
 
 
 ### Simulation 
