add pos smooth simu code

--- a/analysis/poisson_smoothing_benchmark.Rmd
+++ b/analysis/poisson_smoothing_benchmark.Rmd
@@ -19,6 +19,9 @@ We set $n=1024$, repeat 30 times, and $=max(\exp(b))\in \{5,10,100\}$, and $snr 
 ```{r}
 library(tidyverse)
 source('code/poisson_smooth/simulation_summary_smooth.R')
+library(ggplot2)
+library(ggpubr)
+
 ```
 
 ## save plots, run time vs mse
@@ -34,15 +37,16 @@ for(snr in snr_list){
     pch = 1:11
     col = 1:11
     if(count_size==100){
-      rm_method = 'smash'
+      rm_method = c('smash','vst','vst_hetero')
     }else{
-      rm_method = NULL
+      rm_method = c('vst','vst_hetero')
     }
-    pdf(file = paste("/home/dyxie/Rpackages/gsmash/output/plots/smooth_n_1024_snr_",snr,"_count_size_",count_size,".pdf",sep=''),   # The directory you want to save the file in
-    width = 9.1, # The width of the plot in inches
-    height = 11.43) # The height of the plot in inches
+    # pdf(file = paste("/home/dyxie/Rpackages/gsmash/output/plots/smooth_n_1024_snr_",snr,"_count_size_",count_size,".pdf",sep=''),   # The directory you want to save the file in
+    # width = 9.1, # The width of the plot in inches
+    # height = 11.43) # The height of the plot in inches
 
-    par(mfrow=c(3,2))
+    # par(mfrow=c(3,2))
+    plotlist = list()
     for(smooth_func in smooth_func_list){
       file_path = paste("/project2/mstephens/dongyue/poisson_smooth/simu_2023/results/",smooth_func,"30_n_1024_snr_",snr,"_count_size_",count_size,".rds",sep='')
       out = readRDS(file_path)
@@ -82,13 +86,27 @@ for(snr in snr_list){
       methods[methods=='smash_two_step'] = 'two_step'
       methods[methods=='smash_two_step_hetero'] = 'two_step_hetero'
     
-      plot(log2(res_time_mean),res_mean,xlab='run time(log2, seconds)',ylab='RMSE',pch = 1:n_methods,col=1:n_methods, main=function_name)
-      if(smooth_func=='sblocks'){
-        legend('topright',methods,pch=pch,col=col)
-      }
+      # plot(log2(res_time_mean),res_mean,xlab='run time(log2, seconds)',ylab='RMSE',pch = 1:n_methods,col=1:n_methods, main=function_name)
+      # if(smooth_func=='sblocks'){
+      #   legend('topright',methods,pch=pch,col=col)
+      # }
+      
+      p1 = ggplot() +
+     geom_point(data = data.frame(log2_res_time_mean = log2(res_time_mean), res_mean = res_mean, methods = methods),
+                aes(x = log2_res_time_mean, y = res_mean, color = methods, shape = methods),
+                size = 4, alpha = 0.7, stroke = 1.5) +
+     labs(x = "run time (log2, seconds)", y = "RMSE", title = function_name) +
+     scale_color_manual(values = 1:length(methods)) +
+     scale_shape_manual(values = 1:length(methods))
+      
+      plotlist = c(plotlist, list(p1))
+      
       
     }
-    dev.off()
+    p2 = ggarrange(plotlist=plotlist,common.legend = T,legend="bottom",nrow=3,ncol=2)
+    file_name = paste("/home/dyxie/Rpackages/gsmash/output/plots/smooth_n_1024_snr_",snr,"_count_size_",count_size,".pdf",sep='')
+    ggsave(file_name,plot = p2,width=8,height =11,units = 'in')
+    #dev.off()
   }
 }
 
@@ -100,7 +118,7 @@ for(snr in snr_list){
 ## save plots, fitted curve
 
 ```{r}
-plot_all_curves = function(out,method,method_name_for_plot=NULL,add_legend = TRUE){
+plot_all_curves = function(out,method,method_name_for_plot=NULL,add_legend = TRUE,legend_pos = 'topright'){
   #x_median = apply(out$sim_data$X,2,median)
   #plot(x_median,col='grey80',xlab='',ylab='x(median of all runs)',main=method,ylim=range(out$sim_data$X))
 
@@ -134,7 +152,7 @@ plot_all_curves = function(out,method,method_name_for_plot=NULL,add_legend = TRU
   lines(out$output[[which.min(res0)]]$fitted_model[[method]]$posterior$mean_smooth,col=2,lwd=1.5)
   lines(out$output[[which.max(res0)]]$fitted_model[[method]]$posterior$mean_smooth,col=4,lwd=1.5)
   if(add_legend){
-    legend('topright',c('True mean','best fit','worst fit','all others'),lty=c(1,1,1,1),col=c(1,2,4,'grey80'))
+    legend(legend_pos,c('True mean','best fit','worst fit','all others'),lty=c(1,1,1,1),col=c(1,2,4,'grey80'))
   }
   
 
@@ -145,11 +163,11 @@ plot_all_curves = function(out,method,method_name_for_plot=NULL,add_legend = TRU
 
 snr = 1
 count_size = 5
-methods = c('vst_hetero','lik_exp','split_vga_ndwt','smash_two_step_hetero')
-method_names = list(vst_hetero = 'VST(hetero)',lik_exp='likelihood expansion',split_vga_ndwt='splitting(VGA, NDWT)',smash_two_step_hetero = 'two step(hetero)')
+methods = c('lik_exp','split_vga_ndwt','smash_two_step_hetero')
+method_names = list(lik_exp='likelihood expansion',split_vga_ndwt='splitting',smash_two_step_hetero = 'two-step procedure')
 for(smooth_func in smooth_func_list){
-  
-  pdf(file = paste("/home/dyxie/Rpackages/gsmash/output/plots/smooth_",smooth_func,"_n_1024_snr_",snr,"_count_size_",count_size,".pdf",sep=''),  
+
+  pdf(file = paste("/home/dyxie/Rpackages/gsmash/output/plots/smooth_",smooth_func,"_n_1024_snr_",snr,"_count_size_",count_size,".pdf",sep=''),
     width = 11.7, # The width of the plot in inches
     height = 8.3) # The height of the plot in inches
   par(mfrow=c(2,2))
@@ -162,7 +180,7 @@ for(smooth_func in smooth_func_list){
     }else{
       plot_all_curves(out,method=method,method_name_for_plot = method_names[[method]],add_legend = ifelse(smooth_func=='cblocks',F,T))
     }
-    
+
   }
   dev.off()
 }
@@ -174,8 +192,8 @@ for(smooth_func in smooth_func_list){
 ```{r}
 snr = 1
 count_size = 100
-methods = c('vst_hetero','lik_exp_top','split_vga_ndwt','smash_two_step_hetero')
-method_names = list(vst_hetero = 'VST(hetero)',lik_exp_top='likelihood expansion(large counts for nugget)',split_vga_ndwt='splitting(VGA, NDWT)',smash_two_step_hetero = 'two step(hetero)')
+methods = c('lik_exp_top','split_vga_ndwt','smash_two_step_hetero')
+method_names = list(lik_exp_top='likelihood expansion (large counts for nugget)',split_vga_ndwt='splitting',smash_two_step_hetero = 'two-step procedure')
 for(smooth_func in smooth_func_list){
   
   pdf(file = paste("/home/dyxie/Rpackages/gsmash/output/plots/smooth_",smooth_func,"_n_1024_snr_",snr,"_count_size_",count_size,".pdf",sep=''),  
@@ -205,6 +223,8 @@ RNA-seq
 
 ```{r}
 library(smashrgen)
+library(mgcv)
+library(gamlss)
 files = list.files('/project2/mstephens/dongyue/gtex/Yang/CoverageCounts')
 idx = 4
 
@@ -219,61 +239,103 @@ for(f in files[2:4]){
   y = (datax[,idx])
   indi_name = colnames(datax)[idx]
   
-  fit_vst = smash_gen_pois(y,transformation='vst',smoother='smash',
-                                          filter.number = 1,family = 'DaubExPhase',
-                                          est_nugget = FALSE,
-                                          homoskedastic = T)
+  # fit_vst = smash_gen_pois(y,transformation='vst',smoother='smash',
+  #                                         filter.number = 1,family = 'DaubExPhase',
+  #                                         est_nugget = FALSE,
+  #                                         homoskedastic = T)
   fit_split = ebps(y, init_control = list(m_init_method='vga'),
                                             smooth_control = list(wave_trans='ndwt',
                                                                   ndwt_method = 'smash'),
-                                            general_control = list(maxiter=30))
-  fit_lik_exp = smash_gen_pois(y,transformation='lik_expan',smoother='smash',
-                                                est_nugget_maxiter=2,lik_expan_at = 'logx',est_nugget = TRUE,
-                                                ash_pm_init_for0 = TRUE,
-                                                nug.est.limit = 0.3)
-  fit_two_step = smash_two_step(y,homoskedastic=FALSE)
+                                            general_control = list(maxiter=30,printevery=1,verbose=T))
+  # fit_lik_exp = smash_gen_pois(y,transformation='lik_expan',smoother='smash',
+  #                                               est_nugget_maxiter=2,lik_expan_at = 'logx',est_nugget = TRUE,
+  #                                               ash_pm_init_for0 = TRUE,
+  #                                               nug.est.limit = 0.3)
+  # fit_two_step = smash_two_step(y,homoskedastic=FALSE)
+  # 
+  # pdf(file = paste("/home/dyxie/Rpackages/gsmash/output/plots/smooth_",gene_name,"_",indi_name,"_vst.pdf",sep=''),  
+  #   width = 11,
+  #   height = 5) 
+  # plot(y,col='grey80',type='p',pch=20,cex=1,ylab='counts',xlab=paste('Chr',chr),xaxt = "n",main=gene_name)
+  # xlab.idx = round(seq(1,nrow(datax),length.out = 5))
+  # axis(1, at = xlab.idx,labels = datax[xlab.idx,2])
+  # lines(fit_vst$posterior$mean_smooth,col=2,lwd=2)
+  # dev.off()
+  # 
+  #   pdf(file = paste("/home/dyxie/Rpackages/gsmash/output/plots/smooth_",gene_name,"_",indi_name,"_split.pdf",sep=''),
+  #   width = 11,
+  #   height = 5)
+  # plot(y,col='grey80',type='p',pch=20,cex=1,ylab='counts',xlab=paste('Chr',chr),xaxt = "n",main=gene_name)
+  # xlab.idx = round(seq(1,nrow(datax),length.out = 5))
+  # axis(1, at = xlab.idx,labels = datax[xlab.idx,2])
+  # lines(fit_split$posterior$mean_smooth,col=2,lwd=2)
+  # dev.off()
+  # 
+  #   pdf(file = paste("/home/dyxie/Rpackages/gsmash/output/plots/smooth_",gene_name,"_",indi_name,"_lik_exp.pdf",sep=''),  
+  #   width = 11,
+  #   height = 5) 
+  # plot(y,col='grey80',type='p',pch=20,cex=1,ylab='counts',xlab=paste('Chr',chr),xaxt = "n",main=gene_name)
+  # xlab.idx = round(seq(1,nrow(datax),length.out = 5))
+  # axis(1, at = xlab.idx,labels = datax[xlab.idx,2])
+  # lines(fit_lik_exp$posterior$mean_smooth,col=2,lwd=2)
+  # dev.off()
+  # 
+  #   pdf(file = paste("/home/dyxie/Rpackages/gsmash/output/plots/smooth_",gene_name,"_",indi_name,"_two_step.pdf",sep=''),  
+  #   width = 11,
+  #   height = 5) 
+  # plot(y,col='grey80',type='p',pch=20,cex=1,ylab='counts',xlab=paste('Chr',chr),xaxt = "n",main=gene_name)
+  # xlab.idx = round(seq(1,nrow(datax),length.out = 5))
+  # axis(1, at = xlab.idx,labels = datax[xlab.idx,2])
+  # lines(fit_two_step$posterior$mean_smooth,col=2,lwd=2)
+  # dev.off()
+  # 
+
   
-  pdf(file = paste("/home/dyxie/Rpackages/gsmash/output/plots/smooth_",gene_name,"_",indi_name,"_vst.pdf",sep=''),  
+    x = seq(0,1,length.out = length(y))
+  model <- gam(y ~ s(x,bs = "ps",k=100), family=nb)
+  fitted_values <- model$fitted.values
+  pdf(file = paste("/home/dyxie/Rpackages/gsmash/output/plots/smooth_",gene_name,"_",indi_name,"_gam_ps_k100.pdf",sep=''),  
     width = 11,
     height = 5) 
   plot(y,col='grey80',type='p',pch=20,cex=1,ylab='counts',xlab=paste('Chr',chr),xaxt = "n",main=gene_name)
   xlab.idx = round(seq(1,nrow(datax),length.out = 5))
   axis(1, at = xlab.idx,labels = datax[xlab.idx,2])
-  lines(fit_vst$posterior$mean_smooth,col=2,lwd=2)
+  lines(fitted_values,col=2,lwd=2)
   dev.off()
   
-    pdf(file = paste("/home/dyxie/Rpackages/gsmash/output/plots/smooth_",gene_name,"_",indi_name,"_split.pdf",sep=''),  
+      x = seq(0,1,length.out = length(y))
+  model <- gam(y ~ s(x,bs = "ps",k=20), family=nb)
+  fitted_values <- model$fitted.values
+  pdf(file = paste("/home/dyxie/Rpackages/gsmash/output/plots/smooth_",gene_name,"_",indi_name,"_gam_ps_k20.pdf",sep=''),  
     width = 11,
     height = 5) 
   plot(y,col='grey80',type='p',pch=20,cex=1,ylab='counts',xlab=paste('Chr',chr),xaxt = "n",main=gene_name)
   xlab.idx = round(seq(1,nrow(datax),length.out = 5))
   axis(1, at = xlab.idx,labels = datax[xlab.idx,2])
-  lines(fit_split$posterior$mean_smooth,col=2,lwd=2)
+  lines(fitted_values,col=2,lwd=2)
   dev.off()
   
-    pdf(file = paste("/home/dyxie/Rpackages/gsmash/output/plots/smooth_",gene_name,"_",indi_name,"_lik_exp.pdf",sep=''),  
-    width = 11,
-    height = 5) 
-  plot(y,col='grey80',type='p',pch=20,cex=1,ylab='counts',xlab=paste('Chr',chr),xaxt = "n",main=gene_name)
-  xlab.idx = round(seq(1,nrow(datax),length.out = 5))
-  axis(1, at = xlab.idx,labels = datax[xlab.idx,2])
-  lines(fit_lik_exp$posterior$mean_smooth,col=2,lwd=2)
-  dev.off()
-  
-    pdf(file = paste("/home/dyxie/Rpackages/gsmash/output/plots/smooth_",gene_name,"_",indi_name,"_two_step.pdf",sep=''),  
-    width = 11,
-    height = 5) 
-  plot(y,col='grey80',type='p',pch=20,cex=1,ylab='counts',xlab=paste('Chr',chr),xaxt = "n",main=gene_name)
-  xlab.idx = round(seq(1,nrow(datax),length.out = 5))
-  axis(1, at = xlab.idx,labels = datax[xlab.idx,2])
-  lines(fit_two_step$posterior$mean_smooth,col=2,lwd=2)
-  dev.off()
 }
 
 
 
 ```
 
+
+
+```{r}
+library(ggplot2)
+
+p = ggplot(data = datax, aes(x = seq_along(datax[,2]), y = y)) +
+  geom_point(color = 'grey80', size = 1, shape = 20) +
+  scale_x_continuous(breaks = round(seq(1, nrow(datax), length.out = 5)), 
+                     labels = datax[round(seq(1, nrow(datax), length.out = 5)), 2]) +
+  labs(x = paste('Chr', chr), y = 'counts', title = gene_name) +
+  geom_line(aes(y = fit_split$posterior$mean_smooth), color = 2, linewidth  = 1) +
+  theme_minimal()
+
+ggsave(p,filename = '/home/dyxie/Rpackages/gsmash/output/plots/FTH1_split.pdf',width = 11,height = 5)
+```
 
 
 Chip seq:
